# gwat

./: .gitignore  .gitlab-ci.yml  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  COPYING  Makefile  README.md  SECURITY.md  go.mod  go.sum  interfaces.go  oss-fuzz.sh
accounts/: accounts.go  accounts_test.go  manager.go
accounts/abi/: abi.go  abi_test.go  error.go  event.go  event_test.go  method.go  pack.go  pack_test.go  packing_test.go  reflect.go  topics.go  topics_test.go  type.go  type_test.go  unpack.go  unpack_test.go
accounts/keystore/: account_cache.go  account_cache_test.go  file_cache.go  key.go  keystore.go  keystore_test.go  passphrase.go  passphrase_test.go  plain.go  plain_test.go  presale.go  wallet.go  watch.go
accounts/scwallet/: hub.go  securechannel.go  wallet.go
accounts/usbwallet/: hub.go  ledger.go  trezor.go  wallet.go
cmd/abidump/: main.go
cmd/abigen/: main.go
cmd/bootnode/: main.go
cmd/checkpoint-admin/: common.go  exec.go  main.go  status.go
cmd/clef/: main.go
cmd/devp2p/: crawl.go  discv4cmd.go  discv5cmd.go  dns_cloudflare.go  dns_route53.go  dnscmd.go  enrcmd.go  keycmd.go  main.go  nodeset.go  nodesetcmd.go  rlpxcmd.go  runtest.go
cmd/ethkey/: changepassword.go  generate.go  inspect.go  main.go  message.go  message_test.go  run_test.go  utils.go
cmd/evm/: compiler.go  disasm.go  main.go  runner.go  staterunner.go  t8n_test.go
cmd/faucet/: faucet.go  faucet_test.go  website.go
cmd/geth/: accountcmd.go  chaincmd.go  config.go  consolecmd.go  consolecmd_test.go  dao_test.go  dbcmd.go  genesis_test.go  les_test.go  main.go  misccmd.go  run_test.go  snapshot.go  usage.go  version_check.go
cmd/gwat/: accountcmd.go  accountcmd_test.go  chaincmd.go  config.go  consolecmd.go  consolecmd_test.go  dao_test.go  dbcmd.go  (+8 more)
common/: big.go  bytes.go  sorting.go  types.go  types_bls.go  types_test.go
consensus/: consensus.go  errors.go
console/: bridge.go  bridge_test.go  console.go  console_test.go
core/: bench_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  blocks.go  bloom_indexer.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  error.go  events.go  evm.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_test.go  headerchain.go  headerchain_test.go  mkalloc.go  rlp_test.go  state_prefetcher.go  state_processor.go  state_processor_test.go  state_transition.go  state_transition_test.go  tx_cacher.go  tx_journal.go  tx_list.go  tx_list_test.go  tx_noncer.go  tx_pool.go  tx_pool_test.go  (+1 more)
crypto/: crypto.go  crypto_test.go  signature_cgo.go  signature_nocgo.go  signature_test.go
crypto/bls_sig/: BUILD.bazel  aliases.go  public_key.go  public_key_test.go  signature.go  signature_test.go
dag/: dag.go  dag_test.go  test_mocks.go  test_models.go  types.go
eth/: api.go  api_backend.go  api_test.go  backend.go  bloombits.go  discovery.go  handler.go  handler_eth.go  handler_eth_test.go  handler_snap.go  handler_test.go  peer.go  peerset.go  state_accessor.go  sync.go  sync_test.go
ethclient/: ethclient.go  ethclient_test.go  signer.go  signer_test.go
ethstats/: ethstats.go
event/: example_feed_test.go  example_scope_test.go  example_subscription_test.go  subscription.go
graphql/: graphql.go  graphql_test.go  schema.go  service.go
les/: api.go  api_backend.go  api_test.go  benchmark.go  bloombits.go  client.go  client_handler.go  commons.go  costtracker.go  distributor.go  distributor_test.go  enr_entry.go  fetcher.go  fetcher_test.go  handler_test.go  metrics.go  odr.go  odr_requests.go  odr_test.go  peer.go  peer_test.go  protocol.go  pruner.go  pruner_test.go  request_test.go  retrieve.go  server.go  server_handler.go  server_requests.go  servingqueue.go  state_accessor.go  sync.go  sync_test.go  test_helper.go  txrelay.go  ulc.go  ulc_test.go
light/: lightchain.go  nodeset.go  odr.go  odr_test.go  odr_util.go  postprocess.go  trie.go  trie_test.go  txpool.go  txpool_test.go
log/: format.go
metrics/: config.go  cpu_enabled.go  cputime_unix.go  doc.go  metrics.go  metrics_test.go
miner/: miner.go  miner_test.go  unconfirmed.go  unconfirmed_test.go  worker.go  worker_test.go
mobile/: accounts.go  android_test.go  big.go  bind.go  common.go  discover.go  ethclient.go  ethereum.go  geth.go  init.go  interface.go  interface_test.go  logger.go  p2p.go  params.go  primitives.go  types.go  vm.go
node/: api.go  api_test.go  config.go  config_test.go  defaults.go  endpoints.go  jwt_auth.go  node.go  node_example_test.go  node_test.go  rpcstack.go  rpcstack_test.go  utils_test.go
p2p/: dial.go  dial_test.go  message.go  metrics.go  peer.go  peer_test.go  protocol.go  server.go  server_test.go  transport.go  transport_test.go  util.go  util_test.go
params/: bootnodes.go  config.go  dao.go  network_params.go  protocol_params.go  version.go
rlp/: decode_test.go  encode_test.go  iterator_test.go
rpc/: client.go  client_example_test.go  client_test.go  constants_unix.go  endpoints.go  handler.go  http.go  ipc.go  ipc_unix.go  json.go  metrics.go  server.go  service.go  types.go  types_test.go  websocket.go
tests/: block_test_util.go  difficulty_test.go  difficulty_test_util.go  gen_btheader.go  gen_stenv.go  gen_sttransaction.go  init.go  init_test.go  rlp_test_util.go  state_test.go  state_test_util.go  transaction_test.go  transaction_test_util.go
token/: api.go  operation.go  operation_test.go  processor.go  processor_test.go  storage.go  test_utils.go  token.go
trie/: committer.go  database.go  database_test.go  errors.go  hasher.go  iterator.go  iterator_test.go  node.go  node_test.go  proof.go  proof_test.go  secure_trie.go  secure_trie_test.go  stacktrie.go  stacktrie_test.go  sync.go  sync_bloom.go  sync_test.go  trie.go  trie_test.go
validator/: api.go  blockchain_mock.go  consensus.go  consensus_test.go  processor.go  processor_test.go  test_mocks.go  types.go  types_test.go
(+701 files in other folders)
