load("@prysm//tools/go:def.bzl", "go_library")

# gazelle:resolve go github.com/karalabe/usb @prysm//third_party/usb:go_default_library
# gazelle:map_kind go_library go_library @prysm//tools/go:def.bzl

go_library(
    name = "go-ethereum",
    srcs = ["interfaces.go"],
    importpath = "github.com/ethereum/go-ethereum",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//core/types",
    ],
)

alias(
    name = "go_default_library",
    actual = ":go-ethereum",
    visibility = ["//visibility:public"],
)